<resources>
    <string name="app_name">PlayBallTogether</string>
    <string name="search_city">定位中</string>
    <string name="search_hint">输入球场名称、用户名称</string>
    <string name="menu_first_text">首页</string>
    <string name="menu_second_text">球场</string>
    <string name="menu_third_text">附近</string>
    <string name="menu_fourth_text">个人中心</string>
    <string name="fourth_pager_please_logo">请点击登陆</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_user_hint">手机/邮箱/用户名</string>
    <string name="login_pw_hint">密码</string>
    <string name="input_phone">1请输入手机号</string>
    <string name="input_code">2请输入验证码</string>
    <string name="set_password">3设置密码</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="send_code">发送验证码</string>
    <string name="input_code_hint">请输入短信验证码</string>
    <string name="submit_code">提交验证码</string>
    <string name="input_password_hint">请输入6位以上密码</string>
    <string name="register_done">完成注册</string>
    <string name="modify_nickname">修改用户名</string>
    <string name="nickname">用户名：</string>
    <string name="nickname_hint">以中文或者英文字母开头，限4-16个字符，一个汉字为两个字符</string>
    <string name="submit">确定</string>
    <string name="logout">退出账户</string>
    <string name="modify_phone">修改手机号码</string>
    <string name="phone_verification">验证</string>
    <string name="modify_password">修改密码</string>
    <string name="current_password">当前密码：</string>
    <string name="new_password">新密码：</string>
    <string name="confirm_password">确认新密码：</string>
    <string name="password_hint">密码长度至少6个字符，最多32个字符</string>
    <string name="modify_sex">修改性别</string>
    <string name="modify_age">修改年龄</string>
    <string name="modify_connect">修改联系人姓名</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="modify_sign">编辑简介</string>
    <string name="modify_hobby">爱好</string>

    <string name="football">足球</string>
    <string name="basketball">篮球</string>
    <string name="volleyball">排球</string>
    <string name="tennis">网球</string>
    <string name="pingpong">乒乓球</string>
    <string name="billiards">台球</string>
    <string name="badminton">羽毛球</string>

    <string name="dateball">取消</string>
    <string name="publish">发表</string>
    <string name="dateball_title">约球</string>

    <string name="date_ball_title">标题：</string>
    <string name="date_ball_title_hint">请输入标题</string>
    <string name="date_ball_content">内容：</string>
    <string name="date_ball_content_hint">请说写什么吧...</string>
    <string name="date_ball_type">请选择运动类型：</string>
    <string name="date_ball_pickdate">请选择运动日期：</string>
    <string name="date_ball_setdate">设置日期</string>
    <string name="date_ball_set_start_time">请选择开始时间：</string>
    <string name="date_ball_set_end_time">请选择结束时间：</string>
    <string name="date_ball_start_time">开始时间</string>
    <string name="date_ball_end_time">结束时间</string>
    <string name="date_ball_add_pic">添加照片</string>
    <string name="date_ball_playground">我要选场地</string>
    <string name="date_ball_unplayground">我不想选</string>
    <string name="date_ball_num">需要人数：</string>
    <string name="date_ball_detail">约球详情</string>
    <string name="send_date">请求挑战</string>
    <string name="ballground_detail">球场详情</string>
    <string name="ballground_reserve">预定球场</string>
    <string name="ispay">待使用</string>
    <string name="comment">评论</string>
    <string name="commit">提交</string>
    <string name="comment_hint">写下您对球场的评价吧～</string>
    <string name="history_search">历史搜索</string>
    <string name="result">结果</string>
    <string name="my_invite">我的邀请</string>
    <string name="my_accept">我的接受</string>
    <string name="city_name">请输入城市名称</string>
</resources>
