<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_ball_title"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorBlack"
        />

    <EditText
        android:id="@+id/dateball_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/date_ball_title_hint"
        android:textColorHint="@color/colorHint"
        android:singleLine="true"
        android:textSize="15dp"
        />

    <TextView
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_ball_content"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_marginBottom="10dp"
        >
        <EditText
            android:id="@+id/dateball_content_edit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginRight="16dp"
            android:hint="@string/date_ball_content_hint"
            android:textColorHint="@color/colorHint"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:imeOptions="actionDone"
            android:background="@color/colorWhite"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="top"
            android:textSize="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:id="@+id/dateball_add_pic"
            >
            <ImageView
                android:id="@+id/dateball_imageview"
                android:layout_gravity="center_vertical"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/add_pic"
                android:scaleType="fitXY"
                android:layout_marginLeft="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/date_ball_add_pic"
                android:textColor="#636363"
                android:textSize="14dp"
                android:layout_marginLeft="16dp"
                />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</LinearLayout>