<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSubtitle"
        android:minHeight="?attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="6dp"
        >
        <ImageView
            android:id="@+id/dateball_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/back"
            android:scaleType="fitCenter"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_toRightOf="@id/dateball_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorBlack"
            android:text="@string/dateball"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dateball_title"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            />

        <LinearLayout
            android:id="@+id/date_ball_submit"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:background="@drawable/date_ball_submit_unpress"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/publish"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                />
        </LinearLayout>

    </RelativeLayout>


    <ListView
        android:id="@+id/dateball_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="10dp"
        android:background="@color/colorWhite"
        >

    </ListView>

</LinearLayout>