<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:orientation="vertical"
        android:elevation="6dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/ad_layout"
            >

            <com.example.springsora.balltogether.custom_viewpager.AdViewPager
                android:id="@+id/first_pager_ad"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.example.springsora.balltogether.custom_viewpager.AdViewPager>
            <LinearLayout
                android:id="@+id/point_layout"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                >
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:id="@+id/dateball_football"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/football"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/football"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/dateball_basketball"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp">
                    <ImageView
                        android:layout_marginTop="5dp"

                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/basketball"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/basketball"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:id="@+id/dateball_pingpong"
                    android:layout_width="0dp"
                    android:layout_height="60dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/pingpong"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/pingpong"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:id="@+id/dateball_billiards"
                    android:layout_width="0dp"
                    android:layout_height="60dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/billiard"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/billiards"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"
                        />
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_weight="1"
                    android:id="@+id/dateball_badminton"
                    android:layout_width="0dp"
                    android:layout_height="60dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/badminton"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/badminton"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_weight="1"
                    android:id="@+id/dateball_tennis"
                    android:layout_width="0dp"
                    android:layout_height="60dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/tennis"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/tennis"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_weight="1"
                    android:id="@+id/dateball_volleyball"
                    android:layout_width="0dp"
                    android:layout_height="60dp">
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/volleyball"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/volleyball"
                        android:gravity="center"
                        android:layout_marginBottom="5dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="60dp">
                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>